@startuml
class Solution {
    +circuit: Circuit
    +do_power_flow(): void
}

class Circuit {
    +name: str
    +buses: dict[str, Bus]
    +resistors: dict[str, Resistor]
    +loads: dict[str, Load]
    +vsource: VSource
    +i: float
    +add_bus(bus: str): void
    +add_resistor_element(name: str, bus1: str, bus2: str, r: float): void
    +add_load_element(name: str, bus1: str, p: float, v: float): void
    +add_vsource_element(name: str, bus1: str, v: float): void
    +set_i(i: float): void
    +print_nodal_voltage(): void
    +print_circuit_current(): void
}

class Bus {
    +name: str
    +v: float
    +set_bus_v(bus_v: float): void
}

class Resistor {
    +name: str
    +bus1: str
    +bus2: str
    +r: float
    +g: float
    +calc_g(): void
}

class Load {
    +name: str
    +bus1: str
    +p: float
    +v: float
    +r: float
    +g: float
    +calc_g(): void
}

class VSource {
    +name: str
    +bus1: str
    +v: float
}

Solution "1" *-- "1" Circuit : contains
Circuit "1" *-- "many" Bus : contains
Circuit "1" *-- "many" Resistor : contains
Circuit "1" *-- "many" Load : contains
Circuit "1" *-- "1" VSource : contains
@enduml
